Fix max-width spacing

--- a/scss/layout/_page.scss
+++ b/scss/layout/_page.scss
@@ -12,8 +12,8 @@ body {
 }
 
 #app {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
+  max-width: 1300px;
+  margin: 0 auto;
 }
 
 header {
@@ -61,17 +61,17 @@ hr {
 
 .project__img {
   height: 8.25rem;
-  background-image: url('https://images.pexels.com/photos/270348/pexels-photo-270348.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+  background-image: url("https://images.pexels.com/photos/270348/pexels-photo-270348.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0.625rem 0;
 
   &--vlade {
-    background-image: url('https://i.imgur.com/BwqRnHD.png');
+    background-image: url("https://i.imgur.com/BwqRnHD.png");
   }
 
   &--lumins {
-    background-image: url('https://i.imgur.com/15cCWQw.png');
+    background-image: url("https://i.imgur.com/15cCWQw.png");
     background-position: center;
   }
 }
